--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "valorantApi",
+  "name": "default",
   "version": "1.0.0",
   "main": "index.js",
   "license": "MIT",
@@ -8,20 +8,20 @@
     "dev:server": "ts-node-dev --inspect --transpileOnly --ignore-watch node-modules src/server.ts"
   },
   "dependencies": {
-    "@typescript-eslint/parser": "^2.33.0",
-    "express": "^4.17.1"
+    "@typescript-eslint/parser": "6.2.1",
+    "express": "4.18.2"
   },
   "devDependencies": {
-    "@types/express": "^4.17.6",
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "eslint": "^7.0.0",
-    "eslint-config-airbnb-base": "^14.1.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-import-resolver-typescript": "^2.0.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.44",
-    "typescript": "^3.9.2"
+    "@types/express": "4.17.17",
+    "@typescript-eslint/eslint-plugin": "6.2.1",
+    "eslint": "8.46.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-prettier": "8.9.0",
+    "eslint-import-resolver-typescript": "3.5.5",
+    "eslint-plugin-import": "2.28.0",
+    "eslint-plugin-prettier": "5.0.0",
+    "prettier": "3.0.0",
+    "ts-node-dev": "2.0.0",
+    "typescript": "5.1.6"
   }
 }
